# cerulean

./: .dockerignore  .gitignore  Dockerfile  README.md  bamboo-build.bat  bamboo-build.sh  make_shared_component.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
cerulean/: constraint.py  dimensions.py  factor.py  transform.py  visualization.py
docs/source/: conf.py  index.rst
docs/source/api/: cerulean.rst  models.rst
docs/source/usage/: documentation.rst  installation.rst  quickstart.rst
examples/: benchmark.py  end_to_end_basic.py  random_inference.py  stationary.py
examples/benchmark_results/: dim_scaling.csv  num_nodes_scaling.csv  prob_scaling.csv
models/: __init__.py  constraint.py  core.py  dimensions.py  factor.py  transform.py  visualization.py
tests/: DiscreteFactorGraph_test.pkl  test_constraint.py  test_core.py  test_dimensions.py  test_factor.py  test_integration.py  test_transform.py
