[metadata]
name = cerulean
version = 1.0.1
description = Charles River Analytics Factor Graph implementation
long_description = file: README.md
long_description_content_type = text/markdown
author = David Dewhurst
author_email = ddewhurst@cra.com
url = https://git.collab.cra.com/projects/PROP/repos/cerulean/browse
classifiers =
    Development Status :: 5 - Production/Stable Copy
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = cerulean
python_requires = >=3.9
install_requires =
    matplotlib>=3.4
    numpy>=1.21
    opt-einsum>=3.3
    pandas>=1.3
    pyro-api
    pyro-ppl==1.5
    torch>=1.10
    typing-extensions>=3.10; python_version == '3.9'
